# zero_touch_car_diagnostics

./: BACKEND_INTEGRATION_PLAN.md  BUILD_COMPLETE_RELEASE.sh  BUILD_FINAL_APK.sh  BUILD_JAVA_SETUP.md  BUILD_PRERELEASE_APK.md  BUILD_RELEASE.md  BUILD_RELEASE_v1.32.11.sh  BUILD_STATUS_v1.0.0.md  BUILD_v1.2.0_SUMMARY.md  CAR_GRAPHICS_IMPLEMENTATION.md  CHANGES.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_PLAN_v132.md  FINAL_RELEASE_v1.0.0.md  OBD_INTEGRATION.md  QUICK_BUILD_REFERENCE.md  README.md  RELEASE_BUILD_GUIDE.md  RELEASE_COMPLETE.md  RELEASE_DOCUMENTATION_INDEX.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.32.0.md  RELEASE_QUICK_REFERENCE.md  RELEASE_SUMMARY.md  RELEASE_v1_0_0_STATUS.md  SECURITY.md  SESSION_COMPLETION_SUMMARY.md  STATUS.md  build-prerelease-quick.sh  build_and_release.sh  build_android.sh  build_ios.sh  build_release.sh  check_build_status.sh  pubspec.yaml  upload_to_github_release.sh  zero_touch_car_diagnostics.code-workspace
.github/: copilot-instructions.md
.github/workflows/: build-release.yml  debug-ci.yml
android/: gradle.properties  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: flipper_bridge.cpp
android/app/src/main/kotlin/com/example/zero_touch_car_diagnostics/: MainActivity.kt  ObdPlugin.kt
android/app/src/main/kotlin/com/zero_touch/diagnostics/: FlipperBackendChannel.kt
backend/: __init__.py  applicationbackend.cpp  applicationbackend.h  deviceregistry.cpp  deviceregistry.h
backend/serialdevice/: assetmanifest.h  deviceinfo.h  devicestate.h  filemanager.cpp  filemanager.h  flipperzero.cpp  flipperzero.h  recoveryinterface.cpp  screenstreamer.cpp  screenstreamer.h  utilityinterface.cpp  (+2 more)
dotnet-sdk-10.0.101-linux-x64/: dotnet
lib/: main.dart
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+121 files in other folders)
